syntax = "proto3";
package zetachain.zetacore.observer;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/node/x/observer/types";

// store key is tss+chainid+nonce
message NonceToCctx {
  int64 chain_id = 1;
  int64 nonce = 2;
  string cctxIndex = 3;
  string tss = 4;
}
